[package]
name = "uuid7time"
version = "1.0.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8", features = ["v7"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true        # Remove debug symbols for smaller binaries
opt-level = 3       # Maximum optimization
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization (slower build, smaller binary)
